rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__multiple_assignments_valid.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Statement >\n(stringify! (multiple_assignments_valid), \"a[1] = b = 5;\")"
---
a[1] = b = 5;
