rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__multiple_declarations.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (multiple_declarations),\n\"a = 1;\n     b = 2;\n     c = 3;\")"
---
[
    VarDecl(
        VarDecl {
            ident: Ident(
                "a",
            ),
            operator: Equal,
            expr: Atom(
                Literal(
                    Number(
                        1,
                    ),
                ),
            ),
        },
    ),
    VarDecl(
        VarDecl {
            ident: Ident(
                "b",
            ),
            operator: Equal,
            expr: Atom(
                Literal(
                    Number(
                        2,
                    ),
                ),
            ),
        },
    ),
    VarDecl(
        VarDecl {
            ident: Ident(
                "c",
            ),
            operator: Equal,
            expr: Atom(
                Literal(
                    Number(
                        3,
                    ),
                ),
            ),
        },
    ),
]
