rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__negated_assignment.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (negated_assignment),\n\"!a = 1;\").into_iter().map(| stmt | stmt.to_string()).collect :: < Vec < _ >>\n().join(\"\\n\")"
---
!a = 1;
