rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__nested_blocks.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (nested_blocks), \"{ a; { b; c; } }\")"
---
[
    Block(
        Block {
            stmts: [
                ExprStmt(
                    Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                ),
                Block(
                    Block {
                        stmts: [
                            ExprStmt(
                                Atom(
                                    Ident(
                                        Ident(
                                            "b",
                                        ),
                                    ),
                                ),
                            ),
                            ExprStmt(
                                Atom(
                                    Ident(
                                        Ident(
                                            "c",
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
]
