rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__nested_function_call.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (nested_function_call), \"foo(bar(3), 4);\")"
---
[
    ExprStmt(
        Atom(
            FnCall(
                FnCall {
                    fn_name: Ident(
                        "foo",
                    ),
                    args: CommaSeparated {
                        items: [
                            Anonymous(
                                AnonymousFnArg {
                                    expr: Atom(
                                        FnCall(
                                            FnCall {
                                                fn_name: Ident(
                                                    "bar",
                                                ),
                                                args: CommaSeparated {
                                                    items: [
                                                        Anonymous(
                                                            AnonymousFnArg {
                                                                expr: Atom(
                                                                    Literal(
                                                                        Number(
                                                                            3,
                                                                        ),
                                                                    ),
                                                                ),
                                                            },
                                                        ),
                                                    ],
                                                    delimiter: Paren,
                                                },
                                            },
                                        ),
                                    ),
                                },
                            ),
                            Anonymous(
                                AnonymousFnArg {
                                    expr: Atom(
                                        Literal(
                                            Number(
                                                4,
                                            ),
                                        ),
                                    ),
                                },
                            ),
                        ],
                        delimiter: Paren,
                    },
                },
            ),
        ),
    ),
]
