rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__no_op.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (no_op), \";\")"
---
[
    NoOp,
]
