rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__number_declaration.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Statement >\n(stringify! (number_declaration), \"5;\")"
---
5;
