rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__number_expr.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Expr >\n(stringify! (number_expr), \"5\")"
---
Atom(
    Literal(
        Number(
            5,
        ),
    ),
)
