rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__operator_assignment.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (operator_assignment),\n\"\n    a += 1;\n    a -= 1;\n    a /= 1;\n    a *= 1;\n    a %= 1;\n    a >>= 1;\n    a <<= 1;\n    a >>>= 1;\n    \")"
---
[
    VariableDecl(
        VariableDecl {
            ident: Ident(
                "a",
            ),
            operator: PlusEqual,
            expr: Atom(
                Literal(
                    Number(
                        1,
                    ),
                ),
            ),
        },
    ),
    VariableDecl(
        VariableDecl {
            ident: Ident(
                "a",
            ),
            operator: MinusEqual,
            expr: Atom(
                Literal(
                    Number(
                        1,
                    ),
                ),
            ),
        },
    ),
    VariableDecl(
        VariableDecl {
            ident: Ident(
                "a",
            ),
            operator: SlashEqual,
            expr: Atom(
                Literal(
                    Number(
                        1,
                    ),
                ),
            ),
        },
    ),
    VariableDecl(
        VariableDecl {
            ident: Ident(
                "a",
            ),
            operator: StarEqual,
            expr: Atom(
                Literal(
                    Number(
                        1,
                    ),
                ),
            ),
        },
    ),
    VariableDecl(
        VariableDecl {
            ident: Ident(
                "a",
            ),
            operator: PercentEqual,
            expr: Atom(
                Literal(
                    Number(
                        1,
                    ),
                ),
            ),
        },
    ),
    VariableDecl(
        VariableDecl {
            ident: Ident(
                "a",
            ),
            operator: GreaterGreaterEqual,
            expr: Atom(
                Literal(
                    Number(
                        1,
                    ),
                ),
            ),
        },
    ),
    VariableDecl(
        VariableDecl {
            ident: Ident(
                "a",
            ),
            operator: LessLessEqual,
            expr: Atom(
                Literal(
                    Number(
                        1,
                    ),
                ),
            ),
        },
    ),
    VariableDecl(
        VariableDecl {
            ident: Ident(
                "a",
            ),
            operator: GreaterGreaterGreaterEqual,
            expr: Atom(
                Literal(
                    Number(
                        1,
                    ),
                ),
            ),
        },
    ),
]
