rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__parentheses.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Expr >\n(stringify! (parentheses), \"(3 + 4) * 5\")"
---
Binary(
    Binary {
        lhs: Binary(
            Binary {
                lhs: Literal(
                    Number(
                        3,
                    ),
                ),
                op: Plus,
                rhs: Literal(
                    Number(
                        4,
                    ),
                ),
            },
        ),
        op: Star,
        rhs: Literal(
            Number(
                5,
            ),
        ),
    },
)
